<resources>
    <string name="app_name">HITK App</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>


    <string name="school">School</string>
    <string name="this_is_an_image">This is an image</string>
    <string name="college_name">Heritage Institute of Technology</string>
    <string name="college_slogan">Where learning is an interactive evolutionary process</string>
    <string name="college_description">An Autonomous Institution affiliated to MAKAUT, West Bengal</string>
    <string name="the_most_valuable_school">school details</string>
    <string name="about_college">Heritage Institute of Technology, popularly known as HITK or HIT, is one of the best private autonomous engineering colleges in Eastern India. The institute is consistently ranked within Top 5 engineering institute in the state, and the best among self-funded ones. The campus is situated in the southern fringes of Kolkata. It is affiliated to Maulana Abul Kalam Azad University of Technology, Kolkata. It was formed by the Kalyan Bharti Trust.The six wings of the Trust - The Heritage School (THS), Heritage Institute of Technology (HIT-K) , The Heritage Academy (THA) , Heritage Business School (HBS) ,Heritage Law College (HLC) &amp; The Heritage College (THC) together constitute an oasis of learning and have, over the years, carved a niche for themselves among academicians, faculty, students and society, in general. HIT admissions is done on the basis of marks scored in WBJEE.</string>
    <string name="notice">Notice</string>
    <string name="holiday">Holiday</string>
    <string name="faculty_details">faculty details</string>
    <string name="holidays">Holidays</string>
    <string name="faculty">Faculty</string>
    <string name="sign_in_as_student">Sign in as Student</string>
    <string name="sign_in_as_teacher">Sign in as teacher</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="section">Section</string>
    <string name="Name">Name</string>
    <string name="classes">Class</string>
    <string name="submit">submit</string>
    <string name="confirm_password">confirm password</string>
    <string name="password">Password</string>
    <string name="Section">Section</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="subject">Subject</string>
    <string name="student_log_in">Student Log In</string>
    <string name="teacher_log_in">Teacher Log In</string>
    <string name="designation">Designation</string>
    <string name="welcome_teacher">Welcome Teacher</string>
    <string name="assignment">Assignment</string>
    <string name="timetable">Time Table</string>
    <string name="welcome_student">Welcome Student</string>
    <string name="result">Result</string>
    <string name="b_tech_1st_year">B.Tech 1st Year</string>
    <string name="b_tech_2nd_year">B.Tech 2nd Year</string>
    <string name="b_tech_3rd_year">B.Tech 3rd Year</string>
    <string name="b_tech_4th_year">B.Tech 4th Year</string>
    <string name="mca_1st_year">MCA 1st Year</string>
    <string name="mca_2nd_year">MCA 2nd Year</string>
    <string name="m_tech_1st_year">M.Tech 1st Year</string>
    <string name="m_tech_2nd_year">M.Tech 2nd Year</string>
    <string name="syllabus">Syllabus</string>
    <string name="syllabus_sample">Syllabus Sample</string>
    <string name="download">Download</string>
    <string name="title">Title</string>
    <string name="stream">Stream</string>
    <string name="notice_1">Notice 1</string>
    <string name="or">OR</string>
    <string name="college_accredit">(Accredited with \'A\' Grade by NAAC w.e.f. 12/07/2022)</string>
    <string name="log_in">Log IN</string>
    <string name="gallery">Gallery</string>
    <string name="give_file_name">Give File Name</string>
    <string name="choose_file">Choose File</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_assignment">Upload Assignment</string>
    <string name="empty_list">Empty list</string>
</resources>