<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/hitk_logo_contrasted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="1dp">

        <ImageView
            android:id="@+id/home_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/profile"
            android:scaleType="fitXY"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/hitk_pic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/college_name"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:text="@string/college_slogan"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:text="@string/college_description"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#B52222"
            android:text="@string/college_accredit"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/about_college"
            android:textStyle="bold|italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notice"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:text="@string/notice"
                android:backgroundTint="@color/light_yellow"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="10dp"
                app:cornerRadius="20dp"
                android:elevation="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/holiday"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:text="@string/holiday"
                android:backgroundTint="@color/light_yellow"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="10dp"
                app:cornerRadius="20dp"
                android:elevation="10dp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/faculty"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/faculty"
            android:backgroundTint="@color/light_yellow"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="10dp"
            app:cornerRadius="20dp"
            android:elevation="20dp"/>

    </LinearLayout>

</ScrollView>