<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentPageActivity"
    android:background="@color/cyan_200"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/welcome_student"
            android:src="@drawable/student_icon"
            app:civ_border_color="@color/blue"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_student"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/assignment_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/light_yellow"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="@string/assignment"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/time_table_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/light_yellow"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="@string/timetable"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/syllabus_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/light_yellow"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="@string/syllabus"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/result_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/light_yellow"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/result"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>