<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignmentUploadActivity"
    android:background="@color/dark_yellow">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_assignment"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:background="@color/light_yellow"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="File"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/give_file_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_file"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:cornerRadius="20dp"
            android:padding="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_file"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="10dp"
            app:cornerRadius="20dp"
            android:padding="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>