<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@drawable/hitk_logo_contrasted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/student_icon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/blue"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/student_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/light_yellow"
            android:elevation="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_in_as_student"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/or"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/teacher_icon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/blue"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/teacher_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/light_yellow"
            android:elevation="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_in_as_teacher"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>